prepair training dataset

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Сборка датасета\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -36,7 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Нормальный сценарий"
+    "## Визуализация периодов различных сценариев"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Нормальный сценарий"
    ]
   },
   {
@@ -108,7 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Сценарий 1"
+    "### Сценарий 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Описание сценария*"
    ]
   },
   {
@@ -170,7 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Сценарий 2"
+    "### Сценарий 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Описание сценария*"
    ]
   },
   {
@@ -231,7 +259,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Сценарий 3"
+    "### Сценарий 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Описание сценария*"
    ]
   },
   {
@@ -292,7 +327,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Сценарий 4"
+    "### Сценарий 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Описание сценария*"
    ]
   },
   {
@@ -348,6 +390,137 @@
     "axs[2].set_ylim([-30, -10])\n",
     "axs[2].legend()\n",
     "axs[2].grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Аугментация"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создадим временной ряд из 500 периодов нормального сценария.\n",
+    "\n",
+    "3/4 поместим в обучающий датасет, оставшуюся 1/4 -- в тестовый. \n",
+    "\n",
+    "Причем в тестовый набор данных будет произвольным образом вставлены 5 периодов различных аномальных сценариев."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Нормальный сценарий"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug_FTL = []\n",
+    "\n",
+    "aug_CTL = []\n",
+    "\n",
+    "aug_FTV_S = []\n",
+    "\n",
+    "aug_FTF = []\n",
+    "\n",
+    "aug_CLF = []\n",
+    "\n",
+    "aug_CLV_S = []\n",
+    "\n",
+    "aug_FTT = []\n",
+    "\n",
+    "aug_CRTT = []\n",
+    "\n",
+    "\n",
+    "augmenter = (\n",
+    "  TimeWarp(n_speed_change=2, max_speed_ratio=1.2)\n",
+    "  + Dropout(p=0.05, fill='ffill')\n",
+    "  + AddNoise(scale=0.005)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(0, 500 * LENGTH_PERIOD, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, 500):\n",
+    "  cur_aug_FTL = augmenter.augment(np.array(data_normal['FTL']))\n",
+    "  aug_FTL = np.concatenate([aug_FTL, cur_aug_FTL])\n",
+    "\n",
+    "  cur_aug_CTL = augmenter.augment(np.array(data_normal['CTL']))\n",
+    "  aug_CTL = np.concatenate([aug_CTL, cur_aug_CTL])\n",
+    "\n",
+    "  cur_aug_FTV_S = augmenter.augment(np.array(data_normal['FTV_S']))\n",
+    "  aug_FTV_S = np.concatenate([aug_FTV_S, cur_aug_FTV_S])\n",
+    "\n",
+    "  cur_aug_FTF = augmenter.augment(np.array(data_normal['FTF']))\n",
+    "  aug_FTF = np.concatenate([aug_FTF, cur_aug_FTF])\n",
+    "\n",
+    "  cur_aug_CLF = augmenter.augment(np.array(data_normal['CLF']))\n",
+    "  aug_CLF = np.concatenate([aug_CLF, cur_aug_CLF])\n",
+    "\n",
+    "  cur_aug_CLV_S = augmenter.augment(np.array(data_normal['CLV_S']))\n",
+    "  aug_CLV_S = np.concatenate([aug_CLV_S, cur_aug_CLV_S])\n",
+    "\n",
+    "  cur_aug_FTT = augmenter.augment(np.array(data_normal['FTT']))\n",
+    "  aug_FTT = np.concatenate([aug_FTT, cur_aug_FTT])\n",
+    "\n",
+    "  cur_aug_CRTT = augmenter.augment(np.array(data_normal['CRTT']))\n",
+    "  aug_CRTT = np.concatenate([aug_CRTT, cur_aug_CRTT])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Введем тип сценария: 0 - нормальный, ненулевые - аномальные."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type = [0 for i in range(500 * NUMBER_POINTS)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.DataFrame({'time': x[0:375 * NUMBER_POINTS],'FTL': aug_FTL[0:375 * NUMBER_POINTS], 'CTL': aug_CTL[0:375 * NUMBER_POINTS], 'FTV_S': aug_FTV_S[0:375 * NUMBER_POINTS], 'FTF': aug_FTF[0:375 * NUMBER_POINTS], 'CLF': aug_CLF[0:375 * NUMBER_POINTS], 'CLV_S': aug_CLV_S[0:375 * NUMBER_POINTS],'FTT': aug_FTT[0:375 * NUMBER_POINTS], 'CRTT': aug_CRTT[0:375 * NUMBER_POINTS],'type': type[0:375 * NUMBER_POINTS]})\n",
+    "df_train.to_csv('augmented_data/training_dataset.csv', index = False)\n",
+    "\n",
+    "df_test_normal = pd.DataFrame({'time': x[375 * NUMBER_POINTS:500 * NUMBER_POINTS],'FTL': aug_FTL[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'CTL': aug_CTL[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'FTV_S': aug_FTV_S[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'FTF': aug_FTF[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'CLF': aug_CLF[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'CLV_S': aug_CLV_S[375 * NUMBER_POINTS:500 * NUMBER_POINTS],'FTT': aug_FTT[375 * NUMBER_POINTS:500 * NUMBER_POINTS], 'CRTT': aug_CRTT[375 * NUMBER_POINTS:500 * NUMBER_POINTS],'type': type[375 * NUMBER_POINTS:500 * NUMBER_POINTS]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Аномальные сценарии"
    ]
   }
  ],
